<resources>
    <string name="app_name">Accounting Tutors</string>
    <string name="logo">logo</string>

    <string name="login">Login</string>
    <string name="signup">SignUp</string>

    <string name="sendcode">Send Code</string>
    <string name="reset_password">Reset Password</string>

    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignUpActivity</string>
    <string name="action_search">Search</string>
    <string name="action_search_hint">Search Hint</string>
    <string name="title_dialog_signup_success">Welcome!</string>
    <string name="title_dialog_answered">Answer</string>
    <string name="msg_dialog_signup_success">User Registered Successfully !</string>
    <string name="msg_dialog_network_error">Network Error !</string>
    <string name="msg_dialog_sendcode_success">Sent Code Successfully !</string>
    <string name="msg_dialog_reset_password_success">Reset Password Successfully !</string>

    <string name="courses"> Courses</string>
    <string name="contactus"> Contact Us</string>
    <string name="copyright">Copyright 2017  imas-sa.co.za</string>
    <string name="title_actionbar_dashboard">DashBoard</string>
    <string name="title_actionbar_courses">Courses</string>
    <string name="title_actionbar_levels">Levels</string>
    <string name="title_actionbar_contactus">Contact Us</string>
    <string name="title_actionbar_subjects">Subjects</string>
    <string name="title_actionbar_chapters">Chapters</string>
    <string name="title_actionbar_chapter_types">Chapter_Type</string>
    <string name="title_actionbar_purchase">Purchase</string>
    <string name="title_actionbar_video">Video</string>


    <string name="title_activity_dash_board">DashBoard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="icon_cap">&#xf19d;</string>
    <string name="icon_phone">&#xf095;</string>
    <string name="icon_play">&#xf04b;</string>
    <string name="icon_pause">&#xf04c;</string>
    <string name="icon_mute">&#xf026;</string>
    <string name="icon_sound">&#xf028;</string>
    <string name="icon_fullscreen">&#xf0b2;</string>
    <string name="icon_user">&#xf2bd;</string>

    <string name="video"> Video</string>
    <string name="note"> Notes</string>
    <string name="icon_video">&#xf03d;</string>
    <string name="icon_note">&#xf24a;</string>
    <string name="icon_money">&#xf155;</string>
    <string name="icon_download">&#xf019;</string>
    <string name="icon_checked">&#xf00c;</string>

    <string name="purchase"> Purchase</string>
    <string name="currency">R</string>

    <string name="coming_soon">Coming soon</string>
    <string name="opened">Opened</string>

    <string name="loading">Loading...</string>
    <string name="downloading">Downloading...</string>

    <string name="question_filter_answered"></string>

    <string name="title_activity_question">Questions</string>
    <string name="title_activity_ask">Ask</string>
    <string name="title_activity_question_detail">QuestionDetail</string>

    <string name="msg_successfully_answered">Your Answer is submitted.</string>

</resources>
