<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp"
        app:layout_constraintVertical_bias="0.45">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_video"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:padding="15dp"

                android:textAllCaps="true"
                android:textSize="20sp"

                fancy:fb_borderColor="@color/primary"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="@color/primary"
                fancy:fb_focusColor="@color/white"
                fancy:fb_fontIconResource="@string/icon_video"
                fancy:fb_fontIconSize="20sp"
                fancy:fb_iconPosition="left"
                fancy:fb_radius="30dp"
                fancy:fb_text="@string/video"
                fancy:fb_textColor="@color/white" />

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_video_download"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:padding="0dp"
                android:textAlignment="center"
                android:layout_gravity="right"

                android:textAllCaps="true"
                android:textSize="20sp"

                fancy:fb_borderColor="@color/primary"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="@color/white"
                fancy:fb_focusColor="@color/primary"
                fancy:fb_fontIconResource="@string/icon_download"
                fancy:fb_fontIconSize="20sp"
                fancy:fb_iconPosition="left"
                fancy:fb_radius="30dp"
                fancy:fb_text=""
                fancy:fb_textColor="@color/primary" >

            </mehdi.sakout.fancybuttons.FancyButton>

            <ProgressBar
                android:id="@+id/pro_video"
                style="?android:attr/progressBarStyle"

                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="right"
                android:layout_margin="10dp"
                android:indeterminate="false"
                android:max="99"
                android:padding="0dp"
                android:progress="0"
                android:visibility="gone" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_note"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:padding="15dp"
                android:textAlignment="center"

                android:textAllCaps="true"
                android:textSize="20sp"
                fancy:fb_borderColor="@color/primary"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="@color/transparent"
                fancy:fb_focusColor="@color/primary"
                fancy:fb_fontIconResource="@string/icon_note"
                fancy:fb_fontIconSize="20sp"
                fancy:fb_iconPosition="left"
                fancy:fb_radius="30dp"
                fancy:fb_text="@string/note"
                fancy:fb_textColor="@color/primary" />

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_note_download"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:padding="0dp"
                android:layout_gravity="right"

                android:textAllCaps="true"
                android:textSize="20sp"

                fancy:fb_borderColor="@color/primary"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="@color/white"
                fancy:fb_focusColor="@color/primary"
                fancy:fb_fontIconResource="@string/icon_download"
                fancy:fb_fontIconSize="20sp"
                fancy:fb_iconPosition="left"
                fancy:fb_radius="30dp"
                fancy:fb_text=""
                fancy:fb_textColor="@color/primary" />

            <ProgressBar
                android:id="@+id/pro_note"
                style="?android:attr/progressBarStyle"
                android:max="90"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:padding="0dp"
                android:visibility="gone"
                android:indeterminate="false"
                android:layout_gravity="right" />
        </FrameLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>