<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.snowsea.school.IntroActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/collegestudents"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/intro_mask"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="30px"
            android:layout_alignParentBottom="true">

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:textAllCaps="true"

                fancy:fb_borderColor="@color/primary"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="@color/primary"
                fancy:fb_focusColor="@android:color/white"
                fancy:fb_fontIconSize="15sp"
                fancy:fb_iconPosition="right"
                fancy:fb_radius="3dp"
                fancy:fb_text="@string/login"
                fancy:fb_textColor="#FFFFFF"/>


            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:textAllCaps="true"

                fancy:fb_borderColor="@color/primary"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="@android:color/transparent"
                fancy:fb_focusColor="@color/primary"
                fancy:fb_fontIconSize="15sp"
                fancy:fb_iconPosition="right"
                fancy:fb_radius="3dp"
                fancy:fb_text="@string/signup"
                fancy:fb_textColor="@color/primary"/>
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary"
        android:textSize="26sp"
        android:fontFamily="sans-serif-black"
        android:textStyle="normal"
        android:shadowColor="@color/white"
        android:text="@string/app_name"
        android:layout_marginBottom="120dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_above="@+id/textView"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/company_logo" />

</RelativeLayout>
